--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-status": "^1.7.4",
+    "mongoose": "^8.3.3",
     "nodemon": "^3.1.0"
   }
 }
