--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,5 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: | 
-          echo. > .env
+          echo > .env
           echo "${{secrets.PROD_ENV_FILE}}" > .env
