--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,7 @@ jobs:
     - run: npm ci
     - run: | 
           echo > .env
-          echo "${{secrets.PROD_ENV_FILE}}" > .env
+          if (${{ secrets.PROD_ENV_FILE }}) {
+          echo "${{ secrets.PROD_ENV_FILE }}" >> .env
+          }
+    - shell: pwsh  # Explicitly use PowerShell
